--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 <!-- 	link example: Replace links.html above with this and see what happens https://en.wikipedia.org/wiki/Temple_Owls -->
 
-<h1> How Owl You? </h1>
-	<h2> Welcome to <br> An Appreciation <br> of the Creepiness <br> and Cat-like Features <br> of Owls</h2> 
+<h1> Hares Are Awesome! </h1>
+	<h2> Come learn<br> about the <br> cleverness, speed<br> and agility<br> of Hares!</h2> 
 
 	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	</p>
